--- a/package.json
+++ b/package.json
@@ -19,33 +19,31 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
-		"babel-cli": "^6.26.0",
-		"broccoli-asset-rev": "^2.7.0",
-		"ember-ajax": "^3.1.0",
-		"ember-cli": "3.0.0",
-		"ember-cli-app-version": "^3.2.0",
+		"babel-cli": "~6.26.0",
+		"broccoli-asset-rev": "~2.7.0",
+		"ember-ajax": "~3.1.0",
+		"ember-cli": "3.3.0",
+		"ember-cli-app-version": "~3.2.0",
 		"ember-cli-babel": "6.16.0",
-		"ember-cli-dependency-checker": "^3.0.0",
-		"ember-cli-htmlbars": "^2.0.3",
-		"ember-cli-htmlbars-inline-precompile": "^1.0.3",
-		"ember-cli-inject-live-reload": "^1.7.0",
-		"ember-cli-jshint": "^2.0.1",
-		"ember-cli-moment-shim": "3.4.0",
-		"ember-cli-qunit": "^1.4.0",
-		"ember-cli-release": "0.2.8",
-		"ember-cli-sass": "7.1.4",
+		"ember-cli-dependency-checker": "~3.0.0",
+		"ember-cli-htmlbars": "~3.0.0",
+		"ember-cli-htmlbars-inline-precompile": "~1.0.3",
+		"ember-cli-inject-live-reload": "~1.8.2",
+		"ember-cli-jshint": "~2.0.1",
+		"ember-cli-moment-shim": "3.7.1",
+		"ember-cli-qunit": "~4.3.2",
+		"ember-cli-release": "1.0.0-beta.2",
+		"ember-cli-sass": "7.1.7",
 		"ember-cli-sri": "2.1.1",
-		"ember-cli-uglify": "^1.2.0",
-		"ember-data": "^2.5.0",
-		"ember-export-application-global": "^1.0.5",
-		"ember-g-map": "0.0.22",
-		"ember-g-recaptcha": "0.4.0",
-		"ember-load-initializers": "^0.5.1",
-		"ember-moment": "7.4.1",
-		"ember-resolver": "^2.0.3",
-		"loader.js": "^4.0.1"
+		"ember-cli-uglify": "~2.1.0",
+		"ember-data": "~3.3.1",
+		"ember-export-application-global": "~2.0.0",
+		"ember-load-initializers": "~1.1.0",
+		"ember-moment": "7.7.0",
+		"ember-resolver": "~5.0.1",
+		"loader.js": "~4.0.1"
 	},
 	"dependencies": {
-		"rss-to-json": "^1.0.4"
+		"rss-to-json": "~1.0.4"
 	}
 }
