--- a/package.json
+++ b/package.json
@@ -1,49 +1,50 @@
 {
-	"name": "kanzlei",
-	"version": "0.0.0",
-	"description": "Steuerberater Grieser",
-	"private": true,
-	"directories": {
-		"doc": "doc",
-		"test": "tests"
-	},
-	"scripts": {
-		"build": "ember build",
-		"start": "ember server",
-		"test": "ember test"
-	},
-	"repository": "",
-	"engines": {
-		"node": ">= 0.10.0"
-	},
-	"author": "",
-	"license": "MIT",
-	"devDependencies": {
-		"babel-cli": "~6.26.0",
-		"broccoli-asset-rev": "~2.7.0",
-		"ember-ajax": "~3.1.0",
-		"ember-cli": "3.3.0",
-		"ember-cli-app-version": "~3.2.0",
-		"ember-cli-babel": "6.16.0",
-		"ember-cli-dependency-checker": "~3.0.0",
-		"ember-cli-htmlbars": "~3.0.0",
-		"ember-cli-htmlbars-inline-precompile": "~1.0.3",
-		"ember-cli-inject-live-reload": "~1.8.2",
-		"ember-cli-jshint": "~2.0.1",
-		"ember-cli-moment-shim": "3.7.1",
-		"ember-cli-qunit": "~4.3.2",
-		"ember-cli-release": "1.0.0-beta.2",
-		"ember-cli-sass": "7.1.7",
-		"ember-cli-sri": "2.1.1",
-		"ember-cli-uglify": "~2.1.0",
-		"ember-data": "~3.3.1",
-		"ember-export-application-global": "~2.0.0",
-		"ember-load-initializers": "~1.1.0",
-		"ember-moment": "7.7.0",
-		"ember-resolver": "~5.0.1",
-		"loader.js": "~4.0.1"
-	},
-	"dependencies": {
-		"rss-to-json": "~1.0.4"
-	}
+  "name": "kanzlei",
+  "version": "0.0.0",
+  "description": "Steuerberater Grieser",
+  "private": true,
+  "directories": {
+    "doc": "doc",
+    "test": "tests"
+  },
+  "scripts": {
+    "build": "ember build",
+    "start": "ember server",
+    "test": "ember test"
+  },
+  "repository": "",
+  "engines": {
+    "node": ">= 0.10.0"
+  },
+  "author": "",
+  "license": "MIT",
+  "devDependencies": {
+    "babel-cli": "~6.26.0",
+    "broccoli-asset-rev": "~2.7.0",
+    "ember-ajax": "~3.1.0",
+    "ember-cli": "3.3.0",
+    "ember-cli-app-version": "~3.2.0",
+    "ember-cli-babel": "6.16.0",
+    "ember-cli-dependency-checker": "~3.0.0",
+    "ember-cli-htmlbars": "~3.0.0",
+    "ember-cli-htmlbars-inline-precompile": "~1.0.3",
+    "ember-cli-inject-live-reload": "~1.8.2",
+    "ember-cli-jshint": "~2.0.1",
+    "ember-cli-moment-shim": "3.7.1",
+    "ember-cli-qunit": "~4.3.2",
+    "ember-cli-release": "1.0.0-beta.2",
+    "ember-cli-sass": "7.1.7",
+    "ember-cli-sri": "2.1.1",
+    "ember-cli-uglify": "~2.1.0",
+    "ember-data": "~3.3.1",
+    "ember-export-application-global": "~2.0.0",
+    "ember-load-initializers": "~1.1.0",
+    "ember-moment": "7.7.0",
+    "ember-resolver": "~5.0.1",
+    "loader.js": "~4.0.1",
+    "rss-to-json": "^1.0.4"
+  },
+  "dependencies": {
+    "rss-to-json": "~1.0.4"
+  }
 }
